style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html,
body {
    width: 100%;
    height: 100vh;
    overflow-y: hidden;
}

body {
    background: #000;
    font-family: 'Orbitron', sans-serif;
}

button,
button:active,
button:hover {
    border: none;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
    font-family: inherit;
    letter-spacing: 1px;
    outline: none;
    text-transform: uppercase;
    text-align: left;
}

.container {
    display: flex;
    align-items: center;
    justify-content: center;
}

#loader {
    background-color: #fff;
    flex-direction: column;
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    transition: transform 1.5s;
    z-index: 3;
}

#loader.loaded {
    transform: translateY(-100%);
}

#loader .wall {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    visibility: hidden;
    width: 80px;
    margin-bottom: 2em;
}

#loader img {
    animation: stack-brick 0.5s cubic-bezier(0.36, 1.04, 0.68, 1.1) forwards;
    width: 100%;
    opacity: 0;
    visibility: inherit;
}

#loader img:nth-child(1),
#loader img:nth-child(3),
#loader img:nth-child(5) {
    grid-column: 1/3;
    transform: rotate(-45deg) translate(-100%, -100%);
}

#loader img:nth-child(2),
#loader img:nth-child(4) {
    grid-column: 2/4;
    transform: rotate(45deg) translate(100%, 100%);
}

#loader img:nth-child(4) {
    animation-delay: 0.5s;
}
#loader img:nth-child(3) {
    animation-delay: 1s;
}
#loader img:nth-child(2) {
    animation-delay: 1.5s;
}
#loader img:nth-child(1) {
    animation-delay: 2s;
}

@keyframes stack-brick {
    100% {
        opacity: 1;
        transform: none;
    }
}

#loader p {
    animation: flash-text 1.5s linear infinite;
    font-family: 'Press Start 2P', monospace;
    font-size: 1.2em;
    letter-spacing: 1px;
    text-align: center;
    text-transform: uppercase;
}

@keyframes flash-text {
    0%,
    100% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
}

#app {
    padding: 0 0.5em;
    position: relative;
    width: 100%;
    height: 100%;
    transform: translateY(100%);
    transition: 1.5s;
}

#app.show {
    transform: none;
}

.main-menu {
    background-color: #000;
    color: #fff;
    flex-direction: column;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    transition: 0.5s;
    z-index: 1;
}

.main-menu .stat.container {
    flex-direction: column;
    font-family: 'Press Start 2P', monospace;
    font-size: 0.9em;
    position: absolute;
    top: 1em;
}

.main-menu .stat.container .label {
    margin-bottom: 0.2em;
}

.main-menu h1 {
    border-bottom: 0.3em groove #fff;
    font-size: 32px;
    margin-bottom: 1em;
}

.main-menu.container h1 span {
    font-size: 1.4em;
    letter-spacing: 3px;
    text-shadow: 0px 0px 5px #fff, 0px 0px 10px #fff, 0px 0px 20px #fff !important;
}

.main-menu img {
    max-width: 1.5em;
}

.options.container {
    position: relative;
}

.options button {
    font-size: 1em;
    font-weight: bold;
    padding: 0.5em;
    position: relative;
}

.options button:hover,
.options button:active {
    text-shadow: 0px 0px 3px #fff, 0px 0px 5px #fff, 0px 0px 10px #fff !important;
}

.options button:hover::before,
.options button:active::before {
    content: '';
    height: 0;
    width: 0;
    border-top: 0.5em solid transparent;
    border-bottom: 0.5em solid transparent;
    border-left: 0.8em solid #fff;
    position: absolute;
    left: -0.6em;
    top: 50%;
    transform: translateY(-50%);
}

.main-options {
    flex-direction: column;
    align-items: flex-start;
    transition: 0.3s ease-in-out;
}

.level-options {
    position: absolute;
    transition: 0.3s ease-in-out;
}

.hide {
    opacity: 0;
    transform: translateX(-100%);
}

.level-options.hide {
    transform: translateX(100%);
}

.level-options button {
    margin: 1em;
}

#level-return-btn {
    font-size: 0.8em;
    margin: 0;
    position: absolute;
    transform: translateY(100%);
}

#level-return-btn .back-arrow {
    font-size: 1.4em;
    font-weight: bold;
    margin-right: 0.2rem;
}

.overview {
    background-color: rgba(0, 0, 0, 0.7);
    position: fixed;
    width: 100%;
    height: 100%;
    transition: 0.3s ease-in-out;
}

.overview-header {
    color: #000;
    letter-spacing: 1px;
    margin-bottom: 1em;
    text-transform: uppercase;
}

.overview-header img {
    margin-right: 0.5em;
    max-width: 2em;
}
.overview-header h2 {
    font-size: 1.6em;
}

.overview .modal {
    background-color: #fff;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-around;
    padding: 0em 1em 4em;
    position: absolute;
    width: 100%;
    height: 100%;
    transition: 0.3s;
}

.overview .modal p {
    color: #555;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1.2em;
    line-height: 1.2em;
    width: 100%;
}

.overview .modal h3 {
    color: #000;
    display: inline-block;
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 0.5em;
    position: relative;
    text-transform: uppercase;
}

.overview .modal h3::after {
    background-color: #dc0508;
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    width: 1em;
    height: 0.2em;
    transform: translateX(100%);
}

.close-modal {
    background-color: #dc0508;
    border-radius: 50%;
    position: absolute;
    right: 1em;
    top: 1em;
    transition: 0.3s ease;
    width: 2em;
    height: 2em;
}

.close-modal::before,
.close-modal::after {
    background-color: #fff;
    content: '';
    position: absolute;
    width: 60%;
    height: 2px;
}

.close-modal::before {
    transform: rotate(45deg);
}
.close-modal::after {
    transform: rotate(-45deg);
}

.close-modal:hover {
    background-color: #7d0305;
    transform: scale(1.15);
}

.author.container {
    position: absolute;
    bottom: 1em;
}

.author.container a {
    color: rgba(255, 255, 255, 0.5);
    font-size: 0.8em;
    letter-spacing: 1px;
    text-decoration: none;
    transition: 0.3s;
}

.author.container a:hover {
    color: rgba(255, 255, 255, 1);
}

.game-screen {
    position: relative;
    top: 3vmin;
    width: 100%;
    max-width: 480px;
    height: 90vh;
    opacity: 0;
    transform: scale(0.9);
    transition: 0.5s;
}

.game-screen.playmode {
    opacity: 1;
    transform: none;
}

.screen-border {
    position: absolute;
    width: 100%;
    height: 99.9%;
}

.game-screen .msg {
    color: white;
    font-size: 1.7em;
    letter-spacing: 1px;
    pointer-events: none;
    position: absolute;
    text-align: center;
    transition: 0.3s ease-out;
    width: 90%;
}

.game-screen canvas {
    position: absolute;
    width: 92%;
    height: 95%;
    z-index: -1;
}

.game-screen #static-canvas {
    background: #004e92;
    background: linear-gradient(180deg, #004e92 0%, #052c3d 33%, #021821 66%);
}

.game-stats {
    color: #fff;
    font-family: 'Press Start 2P', monospace;
    font-size: 0.9em;
    justify-content: space-between;
    padding-bottom: 0.5em;
    position: absolute;
    top: 0;
    transform: translateY(-100%);
    width: 100%;
}

.stat .label {
    color: #d10609;
    text-transform: uppercase;
}

#gameover-screen {
    border-radius: 0.5em;
    position: fixed;
    width: 90vmin;
    max-width: 500px;
    height: 50vmin;
    max-height: 250px;
    transition: 0.5s ease-in;
    transform: scale(1);
    z-index: 1;
}

#gameover-screen.hide {
    transform: scale(0);
}

#gameover-screen::before {
    filter: blur(10px);
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#gameover-screen,
#gameover-screen::before {
    animation: animate-border 3s linear infinite;
}

#gameover-screen.win,
#gameover-screen.win::before {
    background-color: #23f920;
    background: linear-gradient(
        to bottom right,
        #dc0508,
        #f85f03,
        #f7da00,
        #23f920,
        #1d91ff,
        #ff54ac
    );
    background-size: 400% 400%;
}

#gameover-screen.lose,
#gameover-screen.lose::before {
    background-color: #dc0508;
    background: linear-gradient(to bottom right, #880508, #dc0508, #f94a4d);
    background-size: 400% 400%;
}

@keyframes animate-border {
    0%,
    100% {
        background-position: 0%;
    }
    50% {
        background-position: 100%;
    }
}

.gameover-bg {
    background-color: #111;
    background: radial-gradient(#222, #000);
    border-radius: 0.5em;
    font-size: 12px;
    flex-direction: column;
    justify-content: space-around;
    padding: 1em 0.5em;
    position: absolute;
    top: 0.5em;
    right: 0.5em;
    bottom: 0.5em;
    left: 0.5em;
}

#gameover-screen #result {
    animation: pulse 1s linear 0s infinite;
    font-size: 2.8em;
    letter-spacing: 1px;
    text-transform: uppercase;
}

#gameover-screen.lose #result {
    color: #dc0508;
}
#gameover-screen.win #result {
    color: #23f920;
}

@keyframes pulse {
    0%,
    100% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1);
    }
}

#gameover-screen .options button {
    color: #fff;
    font-size: 1.2em;
    margin: 0 1em;
    padding: 0.5em;
}

@media screen and (min-width: 375px) {
    #gameover-screen {
        font-size: 14px;
    }
}

@media screen and (min-width: 576px) {
    .main-menu h1 {
        font-size: 40px;
    }
    .overview-header h2 {
        font-size: 2em;
    }
    #gameover-screen #result {
        font-size: 3.2em;
        letter-spacing: 2px;
    }
}

@media screen and (min-width: 768px) {
    .main-menu h1 {
        font-size: 52px;
    }

    .overview .modal {
        border-radius: 0.5em;
        padding: 2em;
        max-width: 90vmin;
        max-height: 90vmin;
    }

    .overview .modal h3 {
        font-size: 1.3em;
    }

    #gameover-screen {
        font-size: 18px;
    }
    #gameover-screen #result {
        font-size: 4.5em;
    }
}

@media screen and (orientation: landscape) and (max-height: 575px) {
    .overview .modal {
        border-radius: 0;
        font-size: 14px;
        max-width: 100%;
        max-height: 100%;
        padding: 2em;
    }
}

